--- a/templates/update_student.html
+++ b/templates/update_student.html
@@ -9,4 +9,5 @@
     <input type="submit" value="更新">
     <p><img src="{{ student.picture.url }}" alt=""></p>
 </form>
+<p><a href="{% url 'form_app:delete_student' id=student.id %}">削除する</a></p>
 {% endblock %}
